# staking-dApp

./: README.md
contract/: .gitignore  Cargo.toml  comand.txt
contract/deploy-scripts/: Cargo.toml
contract/deploy-scripts/src/: main.rs
contract/params/: staker_info.json  unstake_params.json
contract/src/: lib.rs  lib1.rs
contract/tests/: tests.rs
frontend/: config.ts  package-lock.json  package.json
frontend/app/: layout.js  layout.tsx  page.js  page.tsx
frontend/app/components/: FundContract.tsx  LoadingPlaceholder.tsx  protocolStats.jsx  protocolStats.tsx  stakeForm.jsx  stakeForm.tsx  stakeHeader.tsx  stakeInfoCard.jsx  stakeInfoCard.tsx  stakeInfoCard2.jsx
frontend/provider/: ConnectWalletProvider.tsx  StateProvider.tsx  WalletProvider.tsx
frontend/utils/: module_euroe_stablecoin.ts  utils.ts
