# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "staking_contract"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Donatus Prince <donatusprinc@.com>"]

[features]
default = ["std"]
std = ["concordium-std/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = { version = "10.0", default-features = false }


[dev-dependencies]
concordium-smart-contract-testing = "4.2"
concordium-std-derive = "6.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[profile.release]
opt-level = "s"
codegen-units = 1
